Jndk 36 (#2)
* database connection test added

* database connection test added

* gitignore update

* gitignore update v2

* dirs deleted

* fix